# docker

./: .gitignore  README.md  _config.yml  index.md
.github/: README.md
docker-compose-files/EFK-filebeat/: .env  README.md  docker-compose.yml
docker-compose-files/ELK/: README.md  docker-stack.yml
docker-compose-files/PGL/: README.md  docker-compose.yml
docker-compose-files/PPGL/: README.md  docker-compose.yml  grafana.env
docker-compose-files/PPGL2/: docker-compose.yml
docker-compose-files/bitnami-postgresql/: README.md
docker-compose-files/elasticsearch/: Dockerfile  README.md  docker-compose.yml
docker-compose-files/elasticsearch-kibana-filebeat/: .env  README.md  docker-compose.yml
docker-compose-files/ghost/: .env.example  (+2 more)
docker-compose-files/jaeger/graphql-api-python/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yml  prometheus.yml  pyproject.toml
docker-compose-files/jaeger/graphql-api-python/grafana/provisioning/datasources/: datasource.yml
docker-compose-files/jaeger/graphql-api-python/src/: main.py  schema.py
docker-compose-files/jaeger/graphql-api-python/src/inputs/: __init__.py
docker-compose-files/jaeger/graphql-api-python/src/middlewares/: __init__.py  correlation.py
docker-compose-files/jaeger/graphql-api-python/src/resolvers/: __init__.py  system_resolver.py  user_resolver.py
docker-compose-files/jaeger/graphql-api-python/src/types/: __init__.py  system_info.py  user.py
docker-compose-files/jaeger/graphql-api-python/src/utils/: config.py  context.md  context.py  logger.py  telemetry.py
docs/: FAQ.md  README.md  choose-the-right-image.md  glossary.md  postgresql.md  redis.md  volumes.md
(+625 files in other folders)
